# Luminol

./: Makefile  PKGBUILD  README.md  Roadmap.md  pyproject.toml
Plan/: 00_Project_Overview.md  01_Color_Extraction.md  02_Color_Assignment.md  03_Configuration.md  04_Templates.md  05_CLI_and_Execution.md  06_Advanced_Topics.md  Advanced_Topics.md  CLI_and_Execution.md  Complete Plan.md  FINAL_PLAN.md
Tests/: config.toml
Tests/templates/: app3.tpl
experimental_daemon/: daemon.py  main.py
src/luminol/: constants.py  exceptions.py  main_cli.py  main_cli_daemon.py
src/luminol/cli/: cli_parser.py  parser.py  term_colors.py
src/luminol/color/: assign.py  assign_logic.py  color_assign.py  color_computation.py  color_math.py  conversion.py  extraction.py  luma.py  preset.py  transformation.py
src/luminol/color/ansi_colors/: assign_ansi.py  python_4bit.py
src/luminol/config/: parser.py  validate.py
src/luminol/core/: constants.py  data_types.py  engine.py  system_actions.py  system_actions_new.py  system_actions_old.py  test_preset.py  tty_reload.py
src/luminol/daemon/: client.py  protocol.py  server.py
src/luminol/exceptions/: exceptions.py
src/luminol/utils/: data_types.py  file_io.py  logging_config.py  palette_generator.py  path.py  path_utils.py  system_actions.py
