[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luminol"
version = "0.1.0"
description = "Color palette generator and theme exporter"
authors = [{ name = "dheemansa", email = "dheemansa2007@gmail.com" }]
license = "GPL-3.0"

dependencies = ["pillow", "numpy"]


[project.scripts]
lumi = "luminol.main_cli:main"
lumid = "luminol.main_cli_daemon:main"

[tool.pylint.messages_control]
disable = ["E0402"]
